syntax = "proto3";
package server;

import "master/messages.proto";

message ClientAddServerRequest {
    master.AddServerRequest req = 1;
}

message ClientAddServerResponse {
    master.AddServerResponse resp = 1;
}

message ClientAddAppRequest {
    master.AddAppRequest req = 1;
}

message ClientAddAppResponse {
    master.AddAppResponse resp = 2;
}

message ClientSearchAppRequest {
    master.GetAppRequest req = 1;
}

message ClientSearchAppResponse {
    master.GetAppResponse resp = 2;
}

message ClientPayloadRequest {
    string receiverApp = 1;
    bytes payload = 2;
}

message ClientPayloadResponse {
    bool resp = 1;
}

message DispatchPayloadRequest {
    string serverUrl = 1;
    uint32 serverPort = 2;
    ClientPayloadRequest clientPayload = 3;
}

message DispatchPayloadResponse {
    bool resp = 1;
}

service ServerServices {
    rpc AddServer(ClientAddServerRequest) returns (ClientAddServerResponse);
    rpc AddApp(ClientAddAppRequest) returns (ClientAddAppResponse);
    rpc SearchApp(ClientSearchAppRequest) returns (ClientSearchAppResponse);
    rpc DispatchPayload(ClientPayloadRequest) returns (ClientPayloadResponse);
}